force-app/main/default/objects/Jira_Project__c/fields/Lead_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account_ID__c</fullName>
    <label>Lead Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 