force-app/main/default/objects/Jira_Project__c/fields/Lead_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Display_Name__c</fullName>
    <label>Lead Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 