force-app/main/default/objects/Jira_Project__c/fields/Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Template__c</fullName>
    <label>Project Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 